--- a/boot-order-service-consumer/pom.xml
+++ b/boot-order-service-consumer/pom.xml
@@ -43,6 +43,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
       <version>2.1.0.RELEASE</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- springboot整合dubbo相关依赖 -->
@@ -50,6 +56,13 @@
       <groupId>com.alibaba.boot</groupId>
       <artifactId>dubbo-spring-boot-starter</artifactId>
       <version>0.2.0</version>
+    </dependency>
+
+    <!-- springcloud hystrics -->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+      <version>2.0.2.RELEASE</version>
     </dependency>
   </dependencies>
 
