--- a/boot-user-service-provider/pom.xml
+++ b/boot-user-service-provider/pom.xml
@@ -44,6 +44,14 @@
       <artifactId>dubbo-spring-boot-starter</artifactId>
       <version>0.2.0</version>
     </dependency>
+
+    <!-- springcloud hystrics -->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+      <version>2.0.2.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
 
